Empty file/entry no longer causes Tika to explode